# libcasm-be

./: .clang-format  .config.mk  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE.txt  Makefile  README.org  libcasm-be.all.h  libcasm-be.h
.cmake/: Findlibcasm-be.cmake  LibPackage.cmake  config.mk
etc/: CMakeLists.txt
etc/benchmark/: CMakeLists.txt  main.cpp
etc/test/: CMakeLists.txt  main.cpp  main.h
src/: Backend.cpp  Backend.h  CMakeLists.txt  CasmBE.h  CasmIRToLLCodePass.cpp  CasmIRToLLCodePass.h  LLCodeBackend.cpp  LLCodeBackend.h  Version.in  Version.in.h  lib.rs  libcasm-be.h
src/transform/: CasmIRToCjelIRPass.cpp  CasmIRToCjelIRPass.h  CasmIRToCselIRPass.cpp  CasmIRToCselIRPass.h  CasmIRToLLCodePass.cpp  CasmIRToLLCodePass.h  CasmIRToNovelPass.cpp  CasmIRToNovelPass.h
src/var/: Backend.cpp  Backend.h  CasmIRToLLCodePass.cpp  CasmIRToLLCodePass.h  LLCodeBackend.cpp  LLCodeBackend.h
uts/: example.cpp  main.cpp  main.h
uts/subject/: example.cpp
var/: Backend.cpp  Backend.h  CasmIRToLLCodePass.cpp  CasmIRToLLCodePass.h  LLCodeBackend.cpp  LLCodeBackend.h
